--- a/package.json
+++ b/package.json
@@ -24,11 +24,22 @@
   },
   "homepage": "https://github.com/AnselmoFarfan2002/CIIS-XXIV#readme",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "@sinclair/typebox": "^0.28.18",
+    "ajv": "^8.12.0",
+    "ajv-errors": "^3.0.0",
+    "ajv-formats": "^2.1.1",
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.1.0",
+    "jose": "^4.14.4",
     "morgan": "^1.10.0",
-    "path": "^0.12.7"
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.3.5",
+    "nanoid": "^4.0.2",
+    "nodemailer": "^6.9.3",
+    "sequelize": "^6.32.1",
+    "socket.io": "^4.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
