--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DB_PASSWORD=usuario
 DB_PORT=3306
 
 JWT_PRIVATE_KEY='C5hCWr@cB<zl6C*]g8sjG7~P@%v9UcXJ'
+KEY_RECAPTCPHA=6LeWTiMnAAAAAK1CzdpM9uIxkn3AoM42OZLpySGR
