--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 SERVER_PORT=3000
-DB_HOST=localhost
+DB_HOST=db
 DB_USER=usuario
 DB_NAME=app_ciis
 DB_PASSWORD=usuario
-DB_PORT=3306
+DB_DOCKER_PORT=3306
+DB_LOCAL_PORT=3307
 
 JWT_PRIVATE_KEY='C5hCWr@cB<zl6C*]g8sjG7~P@%v9UcXJ'
 KEY_RECAPTCPHA=6LeWTiMnAAAAAK1CzdpM9uIxkn3AoM42OZLpySGR
