--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "api of the ciis web site",
   "main": "app.js",
   "scripts": {
+    "start": "node run app.js",
     "server": "nodemon run app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
