--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 SERVER_PORT=3000
-DB_HOST=db
+DB_HOST=localhost
 DB_USER=usuario
 DB_NAME=app_ciis
 DB_PASSWORD=usuario
-DB_DOCKER_PORT=3306
+DB_SERVER_PORT=3306
 DB_LOCAL_PORT=3307
 
 JWT_PRIVATE_KEY='C5hCWr@cB<zl6C*]g8sjG7~P@%v9UcXJ'
