--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "googleapis": "^122.0.0",
     "jose": "^4.14.4",
     "morgan": "^1.10.0",
     "mysql2": "^3.3.5",
