--- a/env.example
+++ b/env.example
@@ -1,9 +1,14 @@
 SERVER_PORT=3000
-DB_HOST=db
+DB_HOST=localhost
 DB_USER=usuario
 DB_NAME=app_ciis
-DB_DOCKER_PORT=3306
-DB_LOCAL_PORT=3307
+DB_PASSWORD=usuario
+DB_DOCKER_PORT=3307
+DB_SERVER_PORT=3306
 
-JWT_PRIVATE_KEY='abcd'
+JWT_PRIVATE_KEY='C5hCWr@cB<zl6C*]g8sjG7~P@%v9UcXJ'
 KEY_RECAPTCPHA=abcd
+
+CLIENT_SECRET_KEY=''
+REFRESH_TOKEN_EMAIL=''
+CLIENT_ID=''
