--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ajv-keywords": "^5.1.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
