--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "googleapis": "^122.0.0",
